--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,11 @@ jobs:
     permissions:
       contents: read
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.2.1
+        with:
+          fetch-depth: 2
+
       - id: setup
         uses: ./.github/actions/setup-node-project
 
@@ -42,6 +47,11 @@ jobs:
       contents: read
       pull-requests: write
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.2.1
+        with:
+          fetch-depth: 2
+
       - uses: ./.github/actions/setup-node-project
 
       - name: Run ESLint
@@ -71,6 +81,11 @@ jobs:
       contents: read
       pull-requests: write
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.2.1
+        with:
+          fetch-depth: 2
+
       - uses: ./.github/actions/setup-node-project
 
       - name: Verify tokens
@@ -84,6 +99,11 @@ jobs:
       contents: read
       pull-requests: write
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.2.1
+        with:
+          fetch-depth: 2
+
       - uses: ./.github/actions/setup-node-project
 
       - name: Run TypeScript compiler
@@ -97,6 +117,11 @@ jobs:
       contents: read
       pull-requests: write
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.2.1
+        with:
+          fetch-depth: 2
+
       - uses: ./.github/actions/setup-node-project
 
       - name: Run Vitest suite
@@ -129,6 +154,11 @@ jobs:
     env:
       NEXT_TELEMETRY_DISABLED: "1"
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.2.1
+        with:
+          fetch-depth: 2
+
       - uses: ./.github/actions/setup-node-project
 
       - name: Build Next.js application
@@ -155,6 +185,11 @@ jobs:
     env:
       NEXT_TELEMETRY_DISABLED: "1"
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.2.1
+        with:
+          fetch-depth: 2
+
       - uses: ./.github/actions/setup-node-project
 
       - name: Download Next.js build artifact
