--- a/.github/workflows/visual-regression.yml
+++ b/.github/workflows/visual-regression.yml
@@ -25,6 +25,11 @@ jobs:
     env:
       NEXT_TELEMETRY_DISABLED: '1'
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.2.1
+        with:
+          fetch-depth: 2
+
       - uses: ./.github/actions/setup-node-project
         with:
           checkout-ref: ${{ inputs.branch != '' && inputs.branch || '' }}
@@ -56,6 +61,11 @@ jobs:
           - webkit
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.2.1
+        with:
+          fetch-depth: 2
+
       - uses: ./.github/actions/setup-node-project
         with:
           checkout-ref: ${{ inputs.branch != '' && inputs.branch || '' }}
