chore: sync tsconfig with Next deploy

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,7 +40,9 @@
         "name": "next"
       }
     ],
-    "incremental": true
+    "incremental": true,
+    "allowJs": true,
+    "skipLibCheck": true
   },
   "include": [
     "next-env.d.ts",
