--- a/.github/workflows/visual-regression.yml
+++ b/.github/workflows/visual-regression.yml
@@ -90,7 +90,7 @@ jobs:
 
       - name: Restore Playwright cache
         id: playwright-cache
-        uses: actions/cache/restore@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.1.0
+        uses: actions/cache/restore@v4.1.2
         with:
           path: ~/.cache/ms-playwright
           key: visual-playwright-${{ steps.playwright-version.outputs.value }}-${{ hashFiles('package-lock.json') }}
@@ -156,7 +156,7 @@ jobs:
 
       - name: Save Playwright cache
         if: ${{ steps.playwright-cache.outputs.cache-hit != 'true' }}
-        uses: actions/cache/save@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.1.0
+        uses: actions/cache/save@v4.1.2
         with:
           path: ~/.cache/ms-playwright
           key: visual-playwright-${{ steps.playwright-version.outputs.value }}-${{ hashFiles('package-lock.json') }}
