ci: restrict workflow to main

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,10 +7,11 @@ concurrency:
 on:
   workflow_call:
   pull_request:
+    branches:
+      - main
   push:
     branches:
       - main
-      - work
 
 jobs:
   checks:
