chore(ci): cancel in-progress workflow-lint runs

--- a/.github/workflows/workflow-lint.yml
+++ b/.github/workflows/workflow-lint.yml
@@ -1,5 +1,9 @@
 name: Workflow Lint
 
+concurrency:
+  group: workflow-lint-${{ github.ref }}
+  cancel-in-progress: true
+
 on:
   pull_request:
     branches:
