--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -53,11 +53,16 @@ jobs:
             echo "Unable to determine package manager"
             exit 1
           fi
+      - name: Resolve pnpm version
+        if: steps.detect-package-manager.outputs.manager == 'pnpm'
+        id: pnpm-version
+        run: |
+          echo "version=$(node -p \"require('./package.json').packageManager.split('@')[1]\")" >> "$GITHUB_OUTPUT"
       - name: Setup pnpm
         if: steps.detect-package-manager.outputs.manager == 'pnpm'
         uses: pnpm/action-setup@a7487c7e89a18df4991f7f222e4898a00d66ddda # v4
         with:
-          version: 9
+          version: ${{ steps.pnpm-version.outputs.version }}
       - name: Setup Node
         uses: actions/setup-node@v5
         with:
