--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "fast-glob": "^3.3.3",
     "gh-pages": "6.3.0",
     "husky": "^9.1.7",
+    "jest-axe": "^10.0.0",
     "jsdom": "^27.0.0",
     "lint-staged": "^16.2.3",
     "p-limit": "^7.1.1",
