--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -7,7 +7,7 @@ concurrency:
 on:
   push:
     branches:
-      - main
+      - ${{ github.event.repository.default_branch }}
     paths-ignore:
       - 'docs/**'
       - '**/*.md'
